--- a/index.html
+++ b/index.html
@@ -848,11 +848,11 @@
 
     <div class="nav-menu" id="navMenu">
         <ul>
-            <li><a href="https://cyberslayersbd.blogspot.com/">Home</a></li>
-            <li><a href="https://cyber-slayers.github.io/cyberslayersbd/courses.html">Courses</a></li>
-            <li><a href="https://cyber-slayers.github.io/cyberslayersbd/trainers.html">Trainers & Mentors</a></li>
-            <li><a href="https://cyber-slayers.github.io/cyberslayersbd/team-owner.html">Team Owner</a></li>            
-            <li><a href="https://cyber-slayers.github.io/cyberslayersbd/contact.html">Contact</a></li>
+            <li><a href="https://saikohackerteamrm.github.io/Home/">Home</a></li>
+            <li><a href="https://saikohackerteamrm.github.io/Course/">Courses</a></li>
+            <li><a href="https://saikohackerteamrm.github.io/Control-Panel/">Trainers & Mentors</a></li>
+            <li><a href="https://saikohackerteamrm.github.io/Team-Onwer/">Team Owner</a></li>            
+            <li><a href="https://saikohackerteamrm.github.io/Contact/">Contact</a></li>
         </ul>
     </div>
 
@@ -892,7 +892,7 @@
                     <a href="https://t.me/Saikoboy7669" class="social-link"><i class="fab fa-telegram"></i></a>
                 </div>
                 
-                <a href="contact.html" class="contact-btn">Get in Touch</a>
+                <a href="https://saikohackerteamrm.github.io/Contact/" class="contact-btn">Get in Touch</a>
             </div>
         </div>
         
