--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         .nav-menu ul li:nth-child(3) { transition-delay: 0.3s; }
         .nav-menu ul li:nth-child(4) { transition-delay: 0.4s; }
         .nav-menu ul li:nth-child(5) { transition-delay: 0.5s; }
-
+.nav-menu ul li:nth-child(6) { transition-delay: 0.6s; }
+        
         .nav-menu ul li a {
             color: #ffffff;
             text-decoration: none;
@@ -853,6 +854,8 @@
             <li><a href="https://saikohackerteamrm.github.io/Control-Panel/">Trainers & Mentors</a></li>
             <li><a href="https://saikohackerteamrm.github.io/Team-Onwer/">Team Owner</a></li>            
             <li><a href="https://saikohackerteamrm.github.io/Contact/">Contact</a></li>
+            <li><a href="https://saikohackerteamrm.github.io/Saikohackerteam/">Service</a></li>
+        
         </ul>
     </div>
 
